<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MovieDetailsActivity">

    <ImageView
        android:id="@+id/MaskImgView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mask"
        android:contentDescription="@string/Img"/>

    <TextView
        android:id="@+id/AgeLimitTxtView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="222dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/film_age_limit"
        android:textColor="@color/text_main"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FilmNameTxtView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:text="@string/film_name"
        android:textColor="@color/text_main"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/FilmTegTxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FilmTegTxtView"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:text="@string/film_tag"
        android:textColor="@color/pink"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FilmNameTxtView" />

    <ImageView
        android:id="@+id/StarImgView1"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:tint="@color/pink"
        app:layout_constraintEnd_toStartOf="@+id/StarImgView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FilmTegTxtView"
        app:srcCompat="@android:drawable/btn_star"
        android:contentDescription="@string/Img"/>

    <ImageView
        android:id="@+id/StarImgView2"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:tint="@color/pink"
        app:layout_constraintEnd_toStartOf="@+id/StarImgView3"
        app:layout_constraintStart_toEndOf="@+id/StarImgView1"
        app:layout_constraintTop_toBottomOf="@+id/FilmTegTxtView"
        app:srcCompat="@android:drawable/btn_star"
        android:contentDescription="@string/Img"/>

    <ImageView
        android:id="@+id/StarImgView3"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:tint="@color/pink"
        app:layout_constraintEnd_toStartOf="@+id/StarImgView4"
        app:layout_constraintStart_toEndOf="@+id/StarImgView2"
        app:layout_constraintTop_toBottomOf="@+id/FilmTegTxtView"
        app:srcCompat="@android:drawable/btn_star"
        android:contentDescription="@string/Img"/>

    <ImageView
        android:id="@+id/StarImgView4"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:tint="@color/pink"
        app:layout_constraintEnd_toStartOf="@+id/StarImgView5"
        app:layout_constraintStart_toEndOf="@+id/StarImgView3"
        app:layout_constraintTop_toBottomOf="@+id/FilmTegTxtView"
        app:srcCompat="@android:drawable/btn_star"
        android:contentDescription="@string/Img"/>

    <ImageView
        android:id="@+id/StarImgView5"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/CountReviewTxtView"
        app:layout_constraintStart_toEndOf="@+id/StarImgView4"
        app:layout_constraintTop_toBottomOf="@+id/FilmTegTxtView"
        app:srcCompat="@android:drawable/btn_star"
        android:contentDescription="@string/Img"/>

    <TextView
        android:id="@+id/CountReviewTxtView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/film_count_review"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/StorylineTxtView"
        app:layout_constraintStart_toEndOf="@+id/StarImgView5"
        app:layout_constraintTop_toBottomOf="@+id/FilmTegTxtView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/StorylineTxtView"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/film_storyline"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/StorulineTextTxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CountReviewTxtView" />

    <TextView
        android:id="@+id/StorulineTextTxtView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/film_storyline_text"
        android:textColor="@color/text_main"
        app:layout_constraintBottom_toTopOf="@+id/CastTxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StorylineTxtView" />

    <TextView
        android:id="@+id/CastTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/film_cast"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ActorImgView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StorulineTextTxtView" />

    <ImageView
        android:id="@+id/ActorImgView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/ActorTxtView1"
        app:layout_constraintEnd_toStartOf="@+id/ActorImgView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CastTxtView"
        app:srcCompat="@drawable/robert_downey_jr_"
        android:contentDescription="@string/Img"/>

    <TextView
        android:id="@+id/ActorTxtView1"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:text="@string/Actor1"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ActorTxtView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActorImgView1" />

    <ImageView
        android:id="@+id/ActorImgView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/Img"
        app:layout_constraintBottom_toTopOf="@+id/ActorTxtView2"
        app:layout_constraintEnd_toStartOf="@+id/ActorImgView3"
        app:layout_constraintStart_toEndOf="@+id/ActorImgView1"
        app:layout_constraintTop_toBottomOf="@+id/CastTxtView"
        app:srcCompat="@drawable/chrisevans"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/ActorTxtView2"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:text="@string/Actor2"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ActorTxtView3"
        app:layout_constraintStart_toEndOf="@+id/ActorTxtView1"
        app:layout_constraintTop_toBottomOf="@+id/ActorImgView2" />

    <ImageView
        android:id="@+id/ActorImgView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/ActorTxtView3"
        app:layout_constraintEnd_toStartOf="@+id/ActorImgView4"
        app:layout_constraintStart_toEndOf="@+id/ActorImgView2"
        app:layout_constraintTop_toBottomOf="@+id/CastTxtView"
        app:srcCompat="@drawable/mark_ruffalo"
        android:contentDescription="@string/Img"/>

    <TextView
        android:id="@+id/ActorTxtView3"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:text="@string/Actor3"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ActorTxtView4"
        app:layout_constraintStart_toEndOf="@+id/ActorTxtView2"
        app:layout_constraintTop_toBottomOf="@+id/ActorImgView3" />

    <ImageView
        android:id="@+id/ActorImgView4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/ActorTxtView4"
        app:layout_constraintStart_toEndOf="@+id/ActorImgView3"
        app:layout_constraintTop_toBottomOf="@+id/CastTxtView"
        app:srcCompat="@drawable/chris_hemsworth"
        android:contentDescription="@string/Img"/>

    <TextView
        android:id="@+id/ActorTxtView4"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/Actor4"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ActorTxtView3"
        app:layout_constraintTop_toBottomOf="@+id/ActorImgView4" />

</android.support.constraint.ConstraintLayout>