<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".FragmentMoviesDetails">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/MaskImgView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mask"
            android:contentDescription="@string/Img"/>

        <TextView
            android:id="@+id/AgeLimitTxtView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="222dp"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/film_age_limit"
            android:textColor="@color/text_main"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/FilmNameTxtView"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="254dp"
            android:layout_marginEnd="16dp"
            android:background="@color/black"
            android:text="@string/film_name"
            android:textColor="@color/text_main"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/FilmTagTxtView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/FilmTagTxtView"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/black"
            android:text="@string/film_tag"
            android:textColor="@color/pink"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FilmNameTxtView" />

        <ImageView
            android:id="@+id/StarImgView1"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/StarImgView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FilmTagTxtView"
            app:srcCompat="@android:drawable/btn_star"
            android:contentDescription="@string/Img"
            app:tint="@color/pink" />

        <ImageView
            android:id="@+id/StarImgView2"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/StarImgView3"
            app:layout_constraintStart_toEndOf="@+id/StarImgView1"
            app:layout_constraintTop_toBottomOf="@+id/FilmTagTxtView"
            app:srcCompat="@android:drawable/btn_star"
            android:contentDescription="@string/Img"
            app:tint="@color/pink" />

        <ImageView
            android:id="@+id/StarImgView3"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/StarImgView4"
            app:layout_constraintStart_toEndOf="@+id/StarImgView2"
            app:layout_constraintTop_toBottomOf="@+id/FilmTagTxtView"
            app:srcCompat="@android:drawable/btn_star"
            android:contentDescription="@string/Img"
            app:tint="@color/pink" />

        <ImageView
            android:id="@+id/StarImgView4"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/StarImgView5"
            app:layout_constraintStart_toEndOf="@+id/StarImgView3"
            app:layout_constraintTop_toBottomOf="@+id/FilmTagTxtView"
            app:srcCompat="@android:drawable/btn_star"
            android:contentDescription="@string/Img"
            app:tint="@color/pink" />

        <ImageView
            android:id="@+id/StarImgView5"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/CountReviewTxtView"
            app:layout_constraintStart_toEndOf="@+id/StarImgView4"
            app:layout_constraintTop_toBottomOf="@+id/FilmTagTxtView"
            app:srcCompat="@android:drawable/btn_star"
            android:contentDescription="@string/Img"/>

        <TextView
            android:id="@+id/CountReviewTxtView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/film_count_review"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/StorylineTxtView"
            app:layout_constraintStart_toEndOf="@+id/StarImgView5"
            app:layout_constraintTop_toBottomOf="@+id/FilmTagTxtView"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/StorylineTxtView"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/film_storyline"
            android:textColor="@color/text_main"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/StorulineTextTxtView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CountReviewTxtView" />

        <TextView
            android:id="@+id/StorulineTextTxtView"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/film_storyline_text"
            android:textColor="@color/text_main"
            app:layout_constraintBottom_toTopOf="@+id/CastTxtView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/StorylineTxtView" />

        <TextView
            android:id="@+id/CastTxtView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/film_cast"
            android:textColor="@color/text_main"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/StorulineTextTxtView"
            app:layout_constraintBottom_toTopOf="@+id/RecyclerActor"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerActor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CastTxtView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>